--- a/tests/bats/.env-test
+++ b/tests/bats/.env-test
@@ -1,5 +1,10 @@
 #!/bin/bash
 
+# SPDX-FileCopyrightText: 2025 Lennart Dohmann <lennart.dohmann@gdata.de>
+#
+# SPDX-License-Identifier: AGPL-3.0-or-later
+
+
 if [[ "$IS_CI" == "true" ]]; then
     export HOSTNAME=nextcloud-container
 else
