--- a/compose-install.yaml
+++ b/compose-install.yaml
@@ -1,10 +1,14 @@
+# SPDX-FileCopyrightText: 2025 Lennart Dohmann <lennart.dohmann@gdata.de>
+#
+# SPDX-License-Identifier: AGPL-3.0-or-later
+
 services:
   nextcloud-container:
     build:
       context: .
       dockerfile: Dockerfile.Nextcloud
       args:
-        - NEXTCLOUD_VERSION=${NEXTCLOUD_VERSION:-31.0.0}
+        - NEXTCLOUD_VERSION=${NEXTCLOUD_VERSION:-31.0.8}
         - INSTALL_XDEBUG=${INSTALL_XDEBUG:-1}
     environment:
       XDEBUG_MODE: ${XDEBUG_MODE:-develop}
