--- a/devcontainer.yaml
+++ b/devcontainer.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2025 Lennart Dohmann <lennart.dohmann@gdata.de>
+#
+# SPDX-License-Identifier: AGPL-3.0-or-later
+
 services:
   dev:
     image: mcr.microsoft.com/devcontainers/php:8.3
@@ -15,7 +19,7 @@ services:
       - .:/var/www/html/apps-extra/gdatavaas:ro,cached
       - .:/workspaces/nextcloud-gdata-antivirus:cached
     environment:
-      SERVER_BRANCH: v31.0.0
+      SERVER_BRANCH: v31.0.8
 
 volumes:
   nextcloud:
