--- a/memory.ini
+++ b/memory.ini
@@ -1,1 +1,5 @@
+; SPDX-FileCopyrightText: 2025 Lennart Dohmann <lennart.dohmann@gdata.de>
+;
+; SPDX-License-Identifier: AGPL-3.0-or-later
+
 memory_limit=-1
