--- a/xdebug.ini
+++ b/xdebug.ini
@@ -1,3 +1,7 @@
+; SPDX-FileCopyrightText: 2025 Lennart Dohmann <lennart.dohmann@gdata.de>
+;
+; SPDX-License-Identifier: AGPL-3.0-or-later
+
 zend_extension=xdebug.so
 xdebug.client_host=nextcloud-server
 xdebug.client_port=9080
