--- a/xdebug.local.ini
+++ b/xdebug.local.ini
@@ -1,3 +1,7 @@
+; SPDX-FileCopyrightText: 2025 Lennart Dohmann <lennart.dohmann@gdata.de>
+;
+; SPDX-License-Identifier: AGPL-3.0-or-later
+
 zend_extension=xdebug.so
 xdebug.start_with_request=yes
 xdebug.mode=debug
