Devcontainer and Workflow Performance by removing old debug stuff.
- Faster local development in devcontainer
- Add Make stages for local fast developing as well as unit and bats tests
- Remove unmaintained files from old debugging sessions

--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,3 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "packageRules": [
-    {
-      "description": "disable major updates for the vaas dependency",
-      "matchDepNames": "gdata/vaas",
-      "enabled": false,
-      "matchUpdateTypes": ["major"]
-    }
-  ]
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json"
 }
