--- a/tests/bats/.env-test
+++ b/tests/bats/.env-test
@@ -5,16 +5,16 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
 
-if [[ "$IS_CI" == "true" ]]; then
+if [[ "$IS_CI" == 1 ]]; then
     export HOSTNAME=nextcloud-container
 else
-    export HOSTNAME=127.0.0.1
+    export HOSTNAME=127.0.0.1:8080
 fi
 
-if [[ "$IS_CI" == "true" ]]; then
+if [[ "$IS_CI" == 1 ]]; then
     export MAIL_HOSTNAME=smtp
 else
-    export MAIL_HOSTNAME=127.0.0.1:8001
+    export MAIL_HOSTNAME=127.0.0.1:8081
 fi
 
 export FOLDER_PREFIX=./tmp/functionality-parallel
