--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,10 +8,14 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        "junstyle.php-cs-fixer",
         "stylelint.vscode-stylelint",
         "jetmartin.bats",
-        "recca0120.vscode-phpunit"
+        "ms-azuretools.vscode-containers",
+        "github.vscode-github-actions",
+        "ms-vscode.makefile-tools",
+        "ms-vscode-remote.remote-containers",
+        "DEVSENSE.phptools-vscode",
+        "redhat.vscode-yaml"
       ]
     }
   },
