--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         "colinodell/psr-testlogger": "1.3.0",
         "phpunit/phpunit": "10.5.52",
         "symfony/console": "v6.4.24",
-        "amphp/http-client": "^5.3",
-        "amphp/amp": "^3.1"
+        "amphp/http-client": "5.3",
+        "amphp/amp": "3.1"
     },
     "autoload": {
         "psr-4": {
