--- a/.github/workflows/lint-eslint.yml
+++ b/.github/workflows/lint-eslint.yml
@@ -13,7 +13,6 @@ on: pull_request
 permissions:
   contents: read
 
-
 jobs:
   changes:
     runs-on: ubuntu-latest
@@ -43,13 +42,11 @@ jobs:
               - '**.ts'
               - '**.vue'
 
-  lint:
+  eslint:
     runs-on: ubuntu-latest
 
     needs: changes
     if: needs.changes.outputs.src != 'false'
-
-    name: NPM lint
 
     steps:
       - name: Checkout
@@ -80,18 +77,3 @@ jobs:
 
       - name: Lint
         run: npm run lint
-
-  summary:
-    permissions:
-      contents: none
-    runs-on: ubuntu-latest
-    needs: [changes, lint]
-
-    if: always()
-
-    # This is the summary, we just avoid to rename it so that branch protection rules still match
-    name: eslint
-
-    steps:
-      - name: Summary status
-        run: if ${{ needs.changes.outputs.src != 'false' && needs.lint.result != 'success' }}; then exit 1; fi
