--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,18 @@
     ],
     "require": {
         "gdata/vaas": "11.0.1",
-        "coduo/php-humanizer": "5.0.0",
-        "vlucas/phpdotenv": "5.6"
+        "coduo/php-humanizer": "5.0.0"
     },
     "require-dev": {
-        "nextcloud/ocp": "v32.0.0",
+        "nextcloud/ocp": "v32.0.2",
         "psalm/phar": "6.8.2",
         "nextcloud/coding-standard": "v1.4.0",
-        "colinodell/psr-testlogger": "1.3.0",
-        "phpunit/phpunit": "10.5.52",
-        "symfony/console": "v6.4.24",
-        "amphp/http-client": "5.3",
-        "amphp/amp": "3.1"
+        "colinodell/psr-testlogger": "1.3.1",
+        "phpunit/phpunit": "10.5.58",
+        "symfony/console": "v6.4.27",
+        "amphp/http-client": "5.3.4",
+        "amphp/amp": "3.1.1",
+        "vlucas/phpdotenv": "5.6.2"
     },
     "autoload": {
         "psr-4": {
