--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -86,6 +86,7 @@ jobs:
         env:
           CLIENT_ID: ${{ secrets.VAAS_CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.VAAS_CLIENT_SECRET }}
+          NEXTCLOUD_HOSTNAME: nextcloud-container
         run: |
           bats --verbose-run --timing --trace ./tests/bats
           ./vendor/bin/phpunit --bootstrap tests/integration/bootstrap.php tests/integration/
