--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,15 @@
         "coduo/php-humanizer": "5.0.0"
     },
     "require-dev": {
-        "nextcloud/ocp": "v31.0.8",
+        "nextcloud/ocp": "v31.0.9",
         "psalm/phar": "6.8.2",
         "nextcloud/coding-standard": "v1.4.0",
-        "colinodell/psr-testlogger": "1.3.0",
-        "phpunit/phpunit": "10.5.52",
-        "symfony/console": "v6.4.24"
+        "colinodell/psr-testlogger": "1.3.1",
+        "phpunit/phpunit": "10.5.58",
+        "symfony/console": "v6.4.27",
+        "amphp/http-client": "5.3.4",
+        "amphp/amp": "3.1.1",
+        "vlucas/phpdotenv": "5.6.2"
     },
     "autoload": {
         "psr-4": {
