add s3 support in app build

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,5 +26,20 @@ services:
     networks:
       - nextcloud-network
 
+  garaged:
+    image: dxflrs/garage:v2.1.0
+    container_name: garaged
+    hostname: garaged
+    restart: unless-stopped
+    volumes:
+      - ./garage.toml:/etc/garage.toml
+    ports:
+      - "3900:3900"
+      - "3901:3901"
+      - "3902:3902"
+      - "3903:3903"
+    networks: 
+      - nextcloud-network
+
 networks:
   nextcloud-network:
